--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="dismiss_error">Dismiss</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fullscreen">Fullscreen</string>
+    <string name="setting">Setting</string>
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
+    <string name="rewind">Rewind</string>
+    <string name="forward">Forward</string>
 </resources>
